# Argentum

./: .gitignore  0040_ISSUE_BRIEF.md  ORCHESTRATOR_EFFICACY_RESEARCH.md  ORCHESTRATOR_EXECUTIVE_SUMMARY.md  README.md  alembic.ini  eslint.config.mjs  package.json  personal_notes.md  pnpm-lock.yaml  post-mvp-hardening-ideas.md  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/: copilot-instructions.md
.github/agents/: argentum-adversarial-review.agent.md  argentum-implementation-auditor.agent.md  argentum-implementer.agent.md  argentum-orchestrator.agent.md  argentum-spec-planner.agent.md
.github/hooks/: README.md
.github/instructions/: argentum-planning.instructions.md  bootstrap-deployment.instructions.md  contract-first.instructions.md  documentation.instructions.md  python-architecture.instructions.md  schema-lifecycle.instructions.md  testing.instructions.md  tests.instructions.md
.github/prompts/: audit-argentum-implementation.prompt.md  doc-sync-check.prompt.md  implement-argentum-slice.prompt.md  phase-exit-review.prompt.md  phase-kickoff.prompt.md  plan-argentum-slice.prompt.md  review-argentum-slice.prompt.md  schema-change-review.prompt.md
alembic/: env.py
alembic/versions/: 20260420_0001_phase1_core_spine.py  20260420_0002_phase2_runtime_approvals.py  20260421_0003_phase3_memory_scheduling_subagents.py  (+1 more)
config/: runtime.json
docs/: Argentum_Modular_Agentic_Framework.md  CURRENT_PHASE.md  PHASE_INDEX.md  STATUS.md  System Architecture Specification.md  System Technical Appendix.md  operator-guide.md  post-mvp-control-plane-ideas.md
(+205 files in other folders)
