[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argentum"
version = "0.1.0"
description = "Task-centric autonomous agent system scaffold."
readme = "docs/STATUS.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2.0",
    "pydantic>=2.11,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
